--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wanderlust</title>
-  </head>
+<!-- <% layout('/layouts/boilerplate') %>
   <body>
     <h3>Edit your Listing</h3>
     <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
@@ -33,4 +27,64 @@
       <button>Edit</button>
     </form>
   </body>
-</html>
+ -->
+
+
+
+ <% layout('/layouts/boilerplate') %>
+<body>
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h1>Edit Your Info</h1>
+            <form method="post" action="/listings/<%= listing._id %>?_method=put" novalidate class="needs-validation" enctype="multipart/form-data" >
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title :</label><br>
+                    <input required class="form-control" type="text" name="listing[title]" value="<%= listing.title %>">
+                    <div class="invalid-feedback">Title looks good!</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description :</label><br>
+                    <textarea required class="form-control" name="listing[description]" id="" cols="80" rows="2"><%= listing.description %></textarea>
+                    <div class="invalid-feedback">Please enter a short Description</div>
+                </div>
+
+                <div class="mb-3">
+                    Original Listing Image: <br>
+                    <img src="<%= listing.image.url %>" />
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="image">Upload New Image :</label><br>
+                    <input class="form-control" type="file" name="listing[image]"  >
+                </div>
+<!-- 
+               <div class="mb-3">
+                <label class="form-label" for="image"> Upload Image Link:</label><br>
+                <input required class="form-control" type="text" name="listing[image][url]" value="<%=listing.image.url%>"> -->
+                
+              <!-- </div> -->
+
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location :</label><br>
+                    <input required class="form-control" type="text" name="listing[location]" value="<%= listing.location %>">
+                    <div class="invalid-feedback">Location should be valid</div>
+                </div>
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label class="form-label" for="price">Price :</label><br>
+                        <input required class="form-control" name="listing[price]" value="<%= listing.price %>">
+                        <div class="invalid-feedback">Price should be valid</div>
+                    </div>
+                    <div class="mb-3 col-md-8">
+                        <label class="form-label" for="country">Country :</label><br>
+                        <input required class="form-control" type="text" name="listing[country]" value="<%= listing.country %>">
+                        <div class="invalid-feedback">Country should be valid</div>
+                    </div>
+                </div>
+                <button type="submit" class=" mt-3 btn btn-dark edit-btn">&nbsp;&nbsp;Edit&nbsp;&nbsp;</button><br><br>
+            </form>
+        </div>
+    </div>
+</body>
+
+<script src="/js/script.js"></script>
