--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,24 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wanderlust</title>
-  </head>
+<% layout("/layouts/boilerplate") -%> 
   <body>
-    <h3>Listing Details :</h3>
-    <ul>
-      <li><%= listing.title %></li>
-      <li><%= listing.description %></li>
-      <li>&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-      <li><%= listing.location %></li>
-      <li><%= listing.country %></li>
-    </ul>
+    <div class="row">
+
+      <div class="col-8 offset-2">
+        <h3><%=listing.title %></h3>
+       
+      </div>
+    <div class="card col-6 offset-2 mt-3 show-card listing-card">
+      <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+      <div class="card-body">
+        <p class="card-text">
+        <i> <%=listing.owner.username%> </i>
+        </p>
+        <p>
+        <%= listing.description %>
+        </p>
+        <p>        &#8377; <%= listing.price.toLocaleString("en-IN") %>
+        </p>
+        <p>
+        <%= listing.location %> </p>
+
+        <p><%= listing.country %></p>
+
+
+       </div>
+    </div>
+    
+
     <br />
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
-    <br /><br />
-    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button>Delete this listing</button>
-    </form>
-  </body>
-</html>
+    
+  </div>
+  <% if( currUser && currUser._id.equals(listing.owner._id)){ %>
+  <div class="btns" >
+
+    
+     <a href="/listings/<%= listing._id %>/edit">
+                    <button class="btn btn-dark ml-2">Edit&nbsp;&nbsp;<i class="fas fa-edit"></i></button>
+                </a>&nbsp;&nbsp;&nbsp;&nbsp;
+
+                <form method="post" action="/listings/<%= listing._id %>?_method=delete">
+                    <button class="btn btn-dark edit-btn">Delete&nbsp;&nbsp;<i class="fa-solid fa-trash"></i></button>
+                </form>
+  </div>
+  <%}%>
+
+  <% if(currUser){ %>
+  <div class="col-8 offset-3" >
+  <hr>
+  <form method="post" action="/listings/<%= listing.id %>/reviews" novalidate class="needs-validation">
+    <h4>Leave a review</h4>
+                <div class="mb-2 mt-2">
+                    <label class="form-label" for="rating">Rating&nbsp;<i class="fa-regular fa-star"></i></label>
+                    <fieldset class="starability-slot">
+                        <input type="radio" id="no-rate first-rate1" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                    </fieldset>
+                </div>
+
+                <div class="mb-2 mt-2">
+                    <label class="form-label" for="comment">Comments...<i class="fa-solid fa-comment"></i></label>
+                    <textarea required placeholder="Write Your Review ..." class="form-control" 
+                    name="review[comment]" id="comment" cols="50" rows="2"></textarea>
+                    <div class="invalid-feedback">Please Submit Some Comment And Review ...</div>
+                </div>
+                <button class="mt-3 btn btn-outline-success ">Submit&nbsp;<i class="fa fa-paper-plane"></i></button>
+            </form>
+   <% }%>        
+
+               <p><b>All Reviews</b></p>
+            <div class="row ">
+                <% for(review of listing.reviews) { %>
+                    <div class="card col-5 p-2 mt-2 ms-5 review-card">
+                        <div class="card-body mb-2">
+                          <h5 class="card-title"><%=review.author.username%></h5>
+                          
+                            <p class="starability-result card-text mb-2" data-rating="<%= review.rating %>"></p>
+                            <p class="card-text"><%= review.comment %></p>
+                        </div>
+                        <form method="post" action="/listings/<%= listing.id %>/reviews/<%= review.id %>?_method=delete">
+                            <button class="btn btn-outline-danger "
+                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                                Delete&nbsp;&nbsp;<i class="fa-solid fa-trash"></i>
+                            </button>
+                        </form>
+                    </div>
+                <% } %>
+            </div>
+        
+    
+</div>
+  
+
+
+ </div>
