--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,12 @@
 
+
+
+
+
+
+<!-- ✅ Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <style>
   .search-btn {
     background-color: #fe424d;
@@ -18,51 +26,74 @@
     border-radius: 25px;
     padding: 0.5rem 3rem;
   }
+
+  /* ✅ Hide collapse on mobile, show modal trigger instead */
+  @media (max-width: 767px) {
+    .desktop-menu {
+      display: none;
+    }
+  }
+  @media (min-width: 768px) {
+    .mobile-toggler {
+      display: none;
+    }
+  }
 </style>
-
-
-
-
-
-
-
-
-
 
 <nav class="navbar navbar-expand-md bg-body-tertiary border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    
+    <!-- ✅ Mobile Hamburger (Modal Trigger) -->
+    <button class="navbar-toggler mobile-toggler" type="button" data-bs-toggle="modal" data-bs-target="#authModal" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+    <!-- ✅ Desktop Menu -->
+    <div class="desktop-menu collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-
-       <div class="navbar-nav ms-auto">
-          <form class="d-flex">
-            <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations">
-            <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
-          </form>
-        </div>
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex">
+          <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations">
+          <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+        </form>
+      </div>
       
       <div class="navbar-nav ms-auto">
-        
         <a class="nav-link" href="listings/new">Airbnb Your Home</a>
-        <%if(!currUser){ %>
-        <a class="nav-link "  href="/signup"><b>Signup</b></a>
-     
-        <a class="nav-link" href="/login"><b>Login</b></a>
-        <%}%>
-        <% if(currUser){ %>
-        <a class="nav-link" href="/logout">Logout</a>
-        <%}%>
+        <% if (!currUser) { %>
+          <a class="nav-link" href="/signup"><b>Signup</b></a>
+          <a class="nav-link" href="/login"><b>Login</b></a>
+        <% } %>
+        <% if (currUser) { %>
+          <a class="nav-link" href="/logout">Logout</a>
+        <% } %>
       </div>
     </div>
+  </div>
 </nav>
 
+<!-- ✅ Modal for Mobile -->
+<div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content text-center p-3">
+      <div class="modal-header">
+        <h5 class="modal-title" id="authModalLabel">Welcome!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Please choose an option:</p>
+        <a href="/login" class="btn btn-primary m-2">Login</a>
+        <a href="/signup" class="btn btn-success m-2">Signup</a>
+        <hr>
+        <a href="/listings" class="btn btn-outline-secondary w-100 mt-2">Explore Listings</a>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!-- ✅ Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
